@@ -1,5 +1,6 @@
 2010-02-13  Xavier Perseguers  <typo3@perseguers.ch>
 
+	* Fixed bug #6196: IFNULL operator cannot be parsed
 	* Fixed bug #13528: Argument 1 passed to ux_t3lib_DB::_quoteFieldNames() must be an array, string given
 
 2010-02-11  Xavier Perseguers  <typo3@perseguers.ch>
